Change cell hover effect,set modal/overlay invisible, fix active class

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ h1 {
 }
 
 .column:hover {
-  border: white solid 1px;
+  border: #727472 solid 3px;
 }
 
 .row {
@@ -156,7 +156,7 @@ h1 {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(0);
   transition: 300ms ease-in-out;
   border: 1px solid #727472;
   height: 260px;
@@ -175,7 +175,7 @@ h1 {
 
 #overlay {
   position: fixed;
-  opacity: 1;
+  opacity: 0;
   transition: 200ms ease-in-out;
   top: 0;
   left: 0;
@@ -191,7 +191,7 @@ h1 {
 }
 
 #gameover.active {
-  transform: scale(1);
+  transform: translate(-50%, -50%) scale(1);
 }
 
 #gameover > button {
